fix scrollBar in weatherPanel fix textInput padding

--- a/src/components/InputCity/InputCity.module.css
+++ b/src/components/InputCity/InputCity.module.css
@@ -1,4 +1,3 @@
-
 .inputBackground {
     margin: 31px 0 0 33px;
     border: 0;
@@ -6,6 +5,7 @@
     border-radius: 5px;
     width: fit-content;
     padding-inline: 10px;
+    padding-bottom: 1px;
     max-width: 200px;
 }
 
